chore: remove deprecated libs.versions.toml
Version catalog not used in Gradle 9 - explicit coordinates in build.gradle.kts